// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Текст, если отчет куплен: ScoreCell_Unlocked 1`] = `
Array [
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "cornerRadius": "{24, 24, 0, 0}",
    "flex": 1,
    "height": 24,
    "name": "stack",
  },
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "children": Array [
      Object {
        "fontSize": 17,
        "fontWeight": "semibold",
        "margin": "{0, 16, 0, 16}",
        "name": "text",
        "text": "Оценка автомобиля",
        "textAlignment": "center",
        "textColor": "000000",
        "textColorDark": "ffffff",
        "textColorID": 21,
      },
      Object {
        "alignSelf": "center",
        "fontSize": 90,
        "fontWeight": "bold",
        "height": 107,
        "margin": "{4, 0, -9, 0}",
        "name": "text",
        "text": "92",
        "textColor": "46cc72",
        "textColorDark": "46cc72",
        "textColorID": 38,
      },
      Object {
        "alignSelf": "center",
        "height": 32,
        "margin": "{0, 0, 8, 0}",
        "name": "image",
        "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/ios/pro-avto-score-ios.png",
        "width": 138,
      },
      Object {
        "fontSize": 15,
        "lineHeight": 22,
        "margin": "{16, 16, 0, 16}",
        "name": "text",
        "text": "Оценка помогает сравнить состояние похожих автомобилей и основана на ключевых пунктах отчета.",
        "textAlignment": "center",
        "textColor": "000000",
        "textColorDark": "ffffff",
        "textColorID": 21,
      },
    ],
    "flexDirection": "column",
    "id": "score",
    "name": "stack",
  },
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "cornerRadius": "{0, 0, 24, 24}",
    "flex": 1,
    "height": 24,
    "name": "stack",
  },
  Object {
    "backgroundColor": "f2f2f7",
    "backgroundColorDark": "000000",
    "backgroundColorID": 18,
    "height": 16,
    "name": "stack",
  },
]
`;

exports[`Текст, если отчет не куплен: ScoreCell_Locked 1`] = `
Array [
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "cornerRadius": "{24, 24, 0, 0}",
    "flex": 1,
    "height": 24,
    "name": "stack",
  },
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "children": Array [
      Object {
        "fontSize": 17,
        "fontWeight": "semibold",
        "margin": "{0, 16, 0, 16}",
        "name": "text",
        "text": "Оценка автомобиля",
        "textAlignment": "center",
        "textColor": "000000",
        "textColorDark": "ffffff",
        "textColorID": 21,
      },
      Object {
        "alignSelf": "center",
        "backgroundColor": "ffffff",
        "backgroundColorDark": "2c2c2e",
        "backgroundColorID": 27,
        "children": Array [
          Object {
            "alignSelf": "center",
            "aspectRatio": 1,
            "height": 38,
            "margin": "{-3, 0, 0, 0}",
            "name": "image",
            "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/ios/score-locked-ios.png",
          },
        ],
        "cornerRadius": 32,
        "height": 64,
        "justifyContent": "center",
        "margin": "{24, 0, 16, 0}",
        "name": "stack",
        "shadowColor": "14000000",
        "shadowColorDark": "00000000",
        "shadowColorID": 14,
        "shadowRadius": 14,
        "width": 64,
      },
      Object {
        "alignSelf": "center",
        "height": 32,
        "margin": "{0, 0, 8, 0}",
        "name": "image",
        "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/ios/pro-avto-score-ios.png",
        "width": 138,
      },
      Object {
        "fontSize": 15,
        "lineHeight": 22,
        "margin": "{16, 16, 0, 16}",
        "name": "text",
        "text": "Купите полный отчёт, чтобы узнать совокупную оценку автомобиля на основе всех пунктов проверки и сравнить с оценками похожих машин.",
        "textAlignment": "center",
        "textColor": "000000",
        "textColorDark": "ffffff",
        "textColorID": 21,
      },
    ],
    "flexDirection": "column",
    "id": "score",
    "name": "stack",
  },
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "cornerRadius": "{0, 0, 24, 24}",
    "flex": 1,
    "height": 24,
    "name": "stack",
  },
  Object {
    "backgroundColor": "f2f2f7",
    "backgroundColorDark": "000000",
    "backgroundColorID": 18,
    "height": 16,
    "name": "stack",
  },
]
`;
